--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,50 @@
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
+# Created by .ignore support plugin (hsz.mobi)
+### JetBrains template
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-# Folder config file
-Desktop.ini
+# User-specific stuff:
+.idea/tasks.xml
+.idea/dictionaries
+.idea/vcs.xml
+.idea/jsLibraryMappings.xml
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
+# Sensitive or high-churn files:
+.idea/dataSources.ids
+.idea/dataSources.xml
+.idea/dataSources.local.xml
+.idea/sqlDataSources.xml
+.idea/dynamic.xml
+.idea/uiDesigner.xml
 
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
+# Gradle:
+# Mongo Explorer plugin:
+.idea/mongoSettings.xml
 
-# Windows shortcuts
-*.lnk
+## File-based project format:
+*.iws
 
-# =========================
-# Operating System Files
-# =========================
+## Plugin-specific files:
 
-# OSX
-# =========================
+# IntelliJ
+/out/
 
-.DS_Store
-.AppleDouble
-.LSOverride
+# mpeltonen/sbt-idea plugin
+.idea_modules/
 
-# Thumbnails
-._*
+# JIRA plugin
+atlassian-ide-plugin.xml
 
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
 
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+/.idea/
+/.gradle/
+/signup.PNG
+/fogot.PNG
+/login.PNG
+/edit profile.PNG
+/build/
