--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     compile ("org.hibernate:hibernate-validator:5.2.4.Final")
     compile ("org.apache.tomcat.embed:tomcat-embed-el:8.0.36")
 
+    compile ("com.h2database:h2:1.4.191")
+
     testCompile("junit:junit:4.12")
     testCompile("org.mockito:mockito-core:1.9.5")
     testCompile("org.springframework:spring-test:4.3.0.RELEASE")
