--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version> 4.3.0.RELEASE</version>
+            <version>4.3.0.RELEASE</version>
         </dependency>
 
         <dependency>
@@ -107,6 +107,9 @@
         </dependency>
 
     </dependencies>
+
+
+
     <build>
         <finalName>stackoverflowAPI</finalName>
         <plugins>
@@ -115,6 +118,15 @@
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>2.17</version>
+                <configuration>
+                    <configLocation>checkstyle.xml</configLocation>
                 </configuration>
             </plugin>
         </plugins>
