--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,15 @@
     <groupId>com.andersenpractice</groupId>
     <artifactId>andersenpractice</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <!--<packaging>war</packaging>-->
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>5.3.0.Alpha1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.thymeleaf</groupId>
