Created DataConfig class with dataBase properties. Changed StackWebInitializer: replaced RootConfig to DataConfig.

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-db.forName = org.postgresql.Driver
+db.driver = org.postgresql.Driver
 db.url = jdbc:postgresql://localhost:5432/stack
-db.user = postgres
+db.username = postgres
 db.password = admin
