--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     compile ("org.apache.tomcat.embed:tomcat-embed-el:8.0.36")
 
     compile ("com.h2database:h2:1.4.191")
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12
+    compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.21'
+
 
     testCompile("junit:junit:4.12")
     testCompile("org.mockito:mockito-core:1.9.5")
