--- a/build.gradle
+++ b/build.gradle
@@ -34,15 +34,17 @@ dependencies {
     compile ("org.springframework.security:spring-security-core:4.1.0.RELEASE")
     compile ("org.springframework.security:spring-security-config:4.1.0.RELEASE")
     compile ("org.springframework.security:spring-security-taglibs:4.1.0.RELEASE")
-    compile ("org.springframework:spring-jdbc:4.3.1.RELEASE")
+    compile ("org.springframework:spring-jdbc:4.3.0.RELEASE")
     compile ("org.thymeleaf:thymeleaf-spring4:3.0.0.RELEASE")
-    compile ("org.hibernate:hibernate-validator:5.2.4.Final")
+    compile ("org.hibernate:hibernate-validator:5.3.0.Alpha1")
+
     compile ("org.apache.tomcat.embed:tomcat-embed-el:8.0.36")
-
     compile ("com.h2database:h2:1.4.191")
-    // https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12
-    compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.21'
+    compile ("org.slf4j:slf4j-log4j12:1.7.21")
 
+    compile ("org.postgresql:postgresql:9.4.1208.jre7")
+    compile ("javax:javaee-web-api:7.0")
+    compile ("org.springframework:spring-orm:4.3.0.RELEASE")
 
     testCompile("junit:junit:4.12")
     testCompile("org.mockito:mockito-core:1.9.5")
